# winzy-clock

./: README.md  pyproject.toml
tests/: test_winzy_clock.py
winzy_clock/: __init__.py
