[project]
name = "winzy-clock"
version = "0.1.0"
description = "Matrix style clock"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "winzy",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/winzy-clock"
Changelog = "https://github.com/sukhbinder/winzy-clock/releases"
Issues = "https://github.com/sukhbinder/winzy-clock/issues"
CI = "https://github.com/sukhbinder/winzy-clock/actions"

[project.entry-points."winzy.plugins"]
clock = "winzy_clock:clock_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
